--- a/config.ini
+++ b/config.ini
@@ -2,4 +2,4 @@
 host = cw-pricing.cb1yxdf5eomu.ap-southeast-2.rds.amazonaws.com
 database = cw_pricing
 user = masterUser
-password = zf8238661BB
+password = masterRicky!!!
