running script on aws, resolve cursor.close issue

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [mysql]
-host = cw-pricing.cb1yxdf5eomu.ap-southeast-2.rds.amazonaws.com
+host = 
 database = cw_pricing
 user = masterUser
-password = masterRicky!!!
+password = 
